test/functions/resolution/errors/testBadCallCandidates.10.good
testBadCallCandidates.chpl:10: In method 'test':
testBadCallCandidates.chpl:11: error: unresolved call 'C.foo(42)'
testBadCallCandidates.chpl:17: note: this candidate did not match: D.foo(x: int)
testBadCallCandidates.chpl:11: note: because method call receiver with type borrowed C
testBadCallCandidates.chpl:16: note: is passed to formal 'this: borrowed D'
testBadCallCandidates.chpl:4: note: candidates are: C.foo(x: string)
testBadCallCandidates.chpl:36: note:                 foo(x: C)
